# back/models/ApiTypes.go
@@ -1,0 +1,9 @@
+package models
+
+type SuccessResponse struct {
+	Data interface{} `json:"data"`
+}
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
